Add Swagger API documentation
